--- a/css/components/header.css
+++ b/css/components/header.css
@@ -6,10 +6,11 @@ header {
 
 .container {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://static.wixstatic.com/media/9956a7_547912c9e51543db9c586d945aa01246~mv2_d_2500_1666_s_2.jpg/v1/fill/w_700,h_587,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/9956a7_547912c9e51543db9c586d945aa01246~mv2_d_2500_1666_s_2.jpg");
+    url("/assets/bg-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh;
   width: 100%;
 }
@@ -21,7 +22,8 @@ header {
   justify-content: center;
   align-items: center;
   margin: auto;
-  background: var(--primary-color);
+  background: transparent;
+  border: 4px solid #ffffff;
   border-radius: 100px;
 }
 
@@ -46,7 +48,7 @@ nav ul {
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
-  color: var(--second-color);
+  color: var(--whiite-color);
   text-transform: capitalize;
   position: relative;
 }
@@ -63,7 +65,7 @@ nav ul {
   display: block;
   width: 0%;
   height: 3px;
-  background: var(--second-color);
+  background: var(--white-color);
   bottom: -5px;
   transition: 500ms;
 }
