--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -3,19 +3,23 @@
   flex-direction: column;
   gap: 2.6rem;
   align-items: center;
-  padding-top: 180px;
+  padding-top: 200px;
   padding-bottom: 269px;
   flex: 1;
 }
 
 .hero h1,
 h2 {
-  font-family: "Great Vibes", sans-serif;
+  font-family: "lerenovare";
   font-style: normal;
   font-weight: 400;
   font-size: 9.6rem;
   text-transform: capitalize;
-  color: white;
+  color: var(--primary-color);
+}
+
+.hero .red {
+  color: var(--second-color);
 }
 
 @media (max-width: 466px) {
