--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -7,8 +7,13 @@ section {
   position: relative;
 }
 
+#contact {
+  background: rgb(235, 206, 206);
+}
+
 .wrapper-title {
-  text-align: center;
+  width: fit-content;
+  margin: auto;
 }
 
 .main-title {
@@ -17,8 +22,60 @@ section {
   font-size: 4.8rem;
   color: var(--second-color);
   text-transform: capitalize;
+  position: relative;
 }
 
+.main-title:not(.not)::before {
+  content: "";
+  position: absolute;
+  width: 82px;
+  height: 6px;
+  background: var(--second-color);
+  left: -120px;
+  top: 16px;
+}
+
+@media (max-width: 600px) {
+  .main-title:not(.not)::before {
+    width: 50px;
+    height: 6px;
+    left: -60px;
+  }
+}
+@media (max-width: 480px) {
+  .main-title:not(.not)::before {
+    width: 20px;
+    height: 6px;
+    left: -30px;
+  }
+}
+
+.main-title:not(.not):after {
+  content: "";
+  position: absolute;
+  width: 82px;
+  height: 6px;
+  background: var(--second-color);
+  right: -120px;
+  top: 18px;
+}
+
+@media (max-width: 600px) {
+  .main-title:not(.not):after {
+    width: 50px;
+    height: 6px;
+    right: -60px;
+    top: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .main-title:not(.not)::after {
+    width: 20px;
+    height: 6px;
+    right: -30px;
+  }
+}
 .card-wrapper {
   display: grid;
   grid-template-columns: repeat(3, auto);
@@ -30,44 +87,52 @@ section {
 
 @media (max-width: 835px) {
   .card-wrapper {
-    grid-template-columns: repeat(1, auto);
-    justify-content: stretch;
+    grid-template-columns: repeat(2, auto);
+  }
+}
+@media (max-width: 680px) {
+  .card-wrapper {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
 .service-card {
   background: #ffffff;
-  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25);
-  padding: 1.4rem 1.4rem 3.2rem 1.4rem;
+  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+  transition: all 200ms;
 }
 
 .service-card img {
   width: 100%;
+  min-height: 271px;
+}
+
+.service-card:hover {
+  transform: scale(1.05);
+}
+
+.card-bottom {
+  padding: 2.7rem 0rem 1.5rem 2rem;
 }
 
 .service-card p {
-  font-style: normal;
-  font-weight: 300;
-  font-size: 3.2rem;
-  color: #000000;
-  text-align: center;
-  text-transform: capitalize;
-  padding-top: 2.7rem;
+  font-weight: 400;
+  font-size: 2.4rem;
+  color: var(--second-color);
 }
 
 .button {
-  max-width: 789px;
-  background: white;
-  padding: 5rem 0;
-  font-size: 2.4rem;
+  display: block;
+  background: var(--second-color);
+  padding: 1rem 3.5rem;
+  font-size: 2rem;
   font-weight: 400;
-  color: var(--second-color);
+  color: var(--white-color);
   text-transform: capitalize;
   text-align: center;
-  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  justify-content: center;
-  margin: 49px auto;
+  border-radius: 100px;
+  width: 135px;
+  margin-top: 3rem;
 }
 
 .button:hover {
