--- a/css/components/review.css
+++ b/css/components/review.css
@@ -7,29 +7,39 @@
 
 .card-review {
   display: flex;
+  flex-direction: column;
   align-items: center;
   column-gap: 7.2rem;
   position: relative;
 }
 
-@media (max-width: 680px) {
-  .card-review {
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .card-review button {
-    order: 1;
-  }
+.card-review figure {
+  max-width: 600px;
+  min-height: 321px;
 }
 
 .review-img {
   width: 100%;
-  max-width: 441px;
+  height: 321px;
+  border: 4px solid var(--second-color);
+  border-radius: 10px;
+}
+
+.wrapper-btns {
+  margin-top: 1rem;
 }
 
 .card-review button {
   padding: 1rem;
+}
+
+.card-review button:hover {
+  box-shadow: 0 0 10px white;
+}
+
+.card-review button i {
+  font-size: 3rem;
+  color: var(--second-color);
 }
 
 .object {
@@ -41,7 +51,7 @@
   border-bottom: 5px solid var(--second-color);
   width: 99%;
   height: 85px;
-  top: 45%;
+  top: 42%;
 }
 
 @media (max-width: 970px) {
