--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -7,10 +7,6 @@ section {
   position: relative;
 }
 
-#contact {
-  background: rgb(235, 206, 206);
-}
-
 .wrapper-title {
   width: fit-content;
   margin: auto;
@@ -100,11 +96,13 @@ section {
   background: #ffffff;
   box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
   transition: all 200ms;
+  max-width: 343px;
 }
 
 .service-card img {
-  width: 100%;
-  min-height: 271px;
+  width: 343px;
+
+  height: 271px;
 }
 
 .service-card:hover {
