--- a/css/global.css
+++ b/css/global.css
@@ -13,6 +13,10 @@
   src: url("../assets/font/ClearSans-Medium.ttf");
 }
 
+html {
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
