--- a/css/components/header.css
+++ b/css/components/header.css
@@ -6,12 +6,12 @@ header {
 
 .container {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/assets/bg-hero.jpg");
+    url("https://dynamic-media-cdn.tripadvisor.com/media/photo-o/09/d8/f8/a8/sweet-home-spa.jpg?w=1200&h=-1&s=1");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 
