--- a/css/components/header.css
+++ b/css/components/header.css
@@ -6,13 +6,19 @@ header {
 
 .container {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://dynamic-media-cdn.tripadvisor.com/media/photo-o/09/d8/f8/a8/sweet-home-spa.jpg?w=1200&h=-1&s=1");
+    url("../../assets/bg-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+}
+
+@media (min-width: 100px) and (max-width: 600px) {
+  .container {
+    background-size: 770px;
+  }
 }
 
 .nav-content {
