--- a/css/components/header.css
+++ b/css/components/header.css
@@ -17,7 +17,13 @@ header {
 
 @media (min-width: 100px) and (max-width: 600px) {
   .container {
-    background-size: 770px;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../../assets/teste.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    width: 100%;
   }
 }
 
