--- a/css/components/header.css
+++ b/css/components/header.css
@@ -21,7 +21,7 @@ header {
       url("../../assets/teste.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: top;
     height: 100vh;
     width: 100%;
   }
