--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -22,6 +22,14 @@ footer::before {
   margin: auto;
 }
 
+@media (max-width: 500px) {
+  .footer-wrapper {
+    grid-template-columns: repeat(1, auto);
+    justify-content: center;
+    gap: 5rem;
+  }
+}
+
 ul li {
   font-weight: 300;
   font-size: 2rem;
