Change h1 font-family

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -10,7 +10,7 @@
 
 .hero h1,
 h2 {
-  font-family: "lerenovare";
+  font-family: "Shadows Into Light", cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 9.6rem;
