--- a/css/components/header.css
+++ b/css/components/header.css
@@ -12,18 +12,17 @@ header {
   background-position: center;
   background-attachment: fixed;
   height: 100vh;
-  width: 100%;
 }
 
-@media (min-width: 100px) and (max-width: 600px) {
+@media (max-width: 425px) {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/teste.png");
+      url("../../assets/bg-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top;
+    background-attachment: fixed;
     height: 100vh;
-    width: 100%;
   }
 }
 
