--- a/css/components/prices.css
+++ b/css/components/prices.css
@@ -56,6 +56,13 @@
 .price-card .content {
   padding: 0 3rem;
   padding-bottom: 4.3rem;
+  line-height: 2rem;
+  height: 260px;
+  display: flex;
+}
+
+.price-card .content.diff {
+  height: fit-content;
 }
 
 .price-card ul {
@@ -73,7 +80,7 @@
 .price-card .bottom {
   display: flex;
   justify-content: center;
-
+  align-items: flex-end;
   background: var(--second-color);
   padding-bottom: 1.2rem;
   padding-top: 1.2rem;
