--- a/css/components/review.css
+++ b/css/components/review.css
@@ -17,6 +17,7 @@
   margin: auto;
   border: 9px solid #cf919c;
   padding: 4.5rem 1rem 8.5rem 3rem;
+  box-shadow: -8px -8px 0px rgba(207, 145, 156, 0.42);
 }
 
 .card-review .header-container {
