--- a/css/components/header.css
+++ b/css/components/header.css
@@ -17,12 +17,11 @@ header {
 @media (max-width: 425px) {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/bg-mobile.png");
+      url("../../assets/bg-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: top;
+    background-position: center center;
     background-attachment: fixed;
-    height: 100vh;
   }
 }
 
