--- a/css/components/header.css
+++ b/css/components/header.css
@@ -14,7 +14,7 @@ header {
   height: 100vh;
 }
 
-@media (max-width: 425px) {
+@media (min-width: 0px) and (max-width: 500px) {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url("../../assets/bg-mobile.jpg");
