--- a/css/components/header.css
+++ b/css/components/header.css
@@ -17,8 +17,7 @@ header {
 
 @media (min-width: 0px) and (max-width: 500px) {
   .container {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/bg-mobile.jpg");
+    background: url("../../assets/bg-mobile.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
