change bg-mobile to contain

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -17,13 +17,10 @@ header {
 
 @media (min-width: 0px) and (max-width: 500px) {
   .container {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    background-image: url("../../assets/bg-mobile.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("../../assets/bg-mobile.jpg");
     background-repeat: no-repeat;
-    webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
     background-attachment: fixed;
     width: 100%;
