--- a/css/components/header.css
+++ b/css/components/header.css
@@ -18,9 +18,9 @@ header {
 @media (min-width: 0px) and (max-width: 500px) {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/bg-mobile.jpg");
+      url("../../assets/mobile.svg");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center center;
     background-attachment: fixed;
     width: 100%;
