--- a/css/components/header.css
+++ b/css/components/header.css
@@ -18,10 +18,10 @@ header {
 @media (min-width: 0px) and (max-width: 500px) {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../../assets/mobile.svg");
+      url("../../assets/teste.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: left;
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
