--- a/css/components/header.css
+++ b/css/components/header.css
@@ -15,14 +15,14 @@ header {
   width: 100%;
 }
 
-@media (min-width: 0px) and (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 600px) {
   .container {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url("../../assets/teste.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     width: 100%;
     height: 100vh;
   }
